Fix display bug on iOS

--- a/assets/css/ff3l.less
+++ b/assets/css/ff3l.less
@@ -428,7 +428,7 @@ body {
     }
 
     .sidebar {
-        height: auto;
+        height: auto !important;
     }
 
     .sidebar.left {
